--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-    "name": "backend",
+    "name": "mitm-transparency",
     "version": "1.0.0",
+    "description": "Playing with mitm",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "author": "",
+    "license": "ISC",
     "dependencies": {
-        "express": "^4.7.1",
-        "method-override": "^2.1.2",
-        "body-parser": "^1.5.1"
+        "express": "^4.7.1"
+    },
+    "engines": {
+        "node": "14.17.5"
     }
 }
