--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.2",
+        "connect": "^3.7.0",
         "cors": "^2.8.5",
-        "express": "^4.7.1"
+        "express": "^4.7.1",
+        "morgan": "^1.10.0",
+        "vhost": "^3.0.2"
     },
     "engines": {
         "node": "14.17.5"
